Rewrite to Kotlin (#36)
* Adjust build.gradle for Kotlin.
* Moved everything to Kotlin.
* Prepare release of version 2.0.0