@@ -1,14 +1,12 @@
 plugins {
-    id 'java'
     id 'jacoco'
     id "org.sonarqube" version "2.8"
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
 
 group = 'com.wikia.tibia'
-version = '1.2.0'
+version = '2.0.0'
 description = 'TibiaWikiBot'
-sourceCompatibility = '14'
-targetCompatibility = '14'
 
 repositories {
     mavenLocal()
@@ -22,6 +20,7 @@ ext {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
     implementation "org.json:json:20190722"
@@ -38,6 +37,13 @@ dependencies {
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
 }
 
+compileKotlin {
+    kotlinOptions.jvmTarget = "11"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "11"
+}
+
 sonarqube {
     properties {
         property "sonar.projectName", "TibiaWikiBot"
@@ -47,18 +53,12 @@ sonarqube {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
-    options.compilerArgs += '--enable-preview'
 }
 
 tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
     useJUnit()
 
     testLogging {
         events "passed", "skipped", "failed"
     }
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
 }
